# int
add_executable(testZfpEndtoend1dInt32 testZfpEndtoend1dInt32.c)
target_link_libraries(testZfpEndtoend1dInt32 cmocka zfp hash32Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend1dInt32 COMMAND testZfpEndtoend1dInt32)

add_executable(testZfpEndtoend1dInt64 testZfpEndtoend1dInt64.c)
target_link_libraries(testZfpEndtoend1dInt64 cmocka zfp hash64Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend1dInt64 COMMAND testZfpEndtoend1dInt64)

add_executable(testZfpEndtoend2dInt32 testZfpEndtoend2dInt32.c)
target_link_libraries(testZfpEndtoend2dInt32 cmocka zfp hash32Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend2dInt32 COMMAND testZfpEndtoend2dInt32)

add_executable(testZfpEndtoend2dInt64 testZfpEndtoend2dInt64.c)
target_link_libraries(testZfpEndtoend2dInt64 cmocka zfp hash64Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend2dInt64 COMMAND testZfpEndtoend2dInt64)

add_executable(testZfpEndtoend3dInt32 testZfpEndtoend3dInt32.c)
target_link_libraries(testZfpEndtoend3dInt32 cmocka zfp hash32Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend3dInt32 COMMAND testZfpEndtoend3dInt32)

add_executable(testZfpEndtoend3dInt64 testZfpEndtoend3dInt64.c)
target_link_libraries(testZfpEndtoend3dInt64 cmocka zfp hash64Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend3dInt64 COMMAND testZfpEndtoend3dInt64)

# floating point
add_executable(testZfpEndtoend1dFloat testZfpEndtoend1dFloat.c)
target_link_libraries(testZfpEndtoend1dFloat cmocka zfp hash32Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend1dFloat COMMAND testZfpEndtoend1dFloat)

add_executable(testZfpEndtoend1dDouble testZfpEndtoend1dDouble.c)
target_link_libraries(testZfpEndtoend1dDouble cmocka zfp hash64Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend1dDouble COMMAND testZfpEndtoend1dDouble)

add_executable(testZfpEndtoend2dFloat testZfpEndtoend2dFloat.c)
target_link_libraries(testZfpEndtoend2dFloat cmocka zfp hash32Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend2dFloat COMMAND testZfpEndtoend2dFloat)

add_executable(testZfpEndtoend2dDouble testZfpEndtoend2dDouble.c)
target_link_libraries(testZfpEndtoend2dDouble cmocka zfp hash64Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend2dDouble COMMAND testZfpEndtoend2dDouble)

add_executable(testZfpEndtoend3dFloat testZfpEndtoend3dFloat.c)
target_link_libraries(testZfpEndtoend3dFloat cmocka zfp hash32Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend3dFloat COMMAND testZfpEndtoend3dFloat)

add_executable(testZfpEndtoend3dDouble testZfpEndtoend3dDouble.c)
target_link_libraries(testZfpEndtoend3dDouble cmocka zfp hash64Lib genSmoothRandNumsLib)
add_test(NAME testZfpEndtoend3dDouble COMMAND testZfpEndtoend3dDouble)
